<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>name.abuchen.portfolio</groupId>
		<artifactId>portfolio-app</artifactId>
		<version>0.64.1-SNAPSHOT</version>
		<relativePath>../portfolio-app</relativePath>
	</parent>

	<artifactId>name.abuchen.portfolio</artifactId>
	<packaging>eclipse-plugin</packaging>

	<properties>
		<sonar.coverage.jacoco.xmlReportPaths>../name.abuchen.portfolio.tests/target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
	</properties>

	<build>
		<resources>
			<resource>
				<directory>./</directory>
				<includes>
					<include>build-info.properties</include>
				</includes>
				<filtering>true</filtering>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<artifactId>maven-enforcer-plugin</artifactId>
				<executions>
					<execution>
						<id>enforce-versions</id>
						<phase>none</phase>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-p2-plugin</artifactId>
				<configuration>
					<generateDownloadStatsProperty>true</generateDownloadStatsProperty>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>buildnumber-maven-plugin</artifactId>
				<version>1.4</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>create-timestamp</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<timestampPropertyName>maven.build.timestamp</timestampPropertyName>
					<timestampFormat>yyyy-MM-dd'T'HH:mm:ss</timestampFormat>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jarsigner-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<source>17</source>
					<target>17</target>
				</configuration>
			</plugin>
	            <plugin>
	                <groupId>com.github.os72</groupId>
	                <artifactId>protoc-jar-maven-plugin</artifactId>
	                <executions>
	                    <execution>
	                        <phase>generate-sources</phase>
	                        <goals>
	                            <goal>run</goal>
	                        </goals>
							<configuration>
									<protocArtifact>com.google.protobuf:protoc:3.22.2</protocArtifact>
	                                <addProtoSources>all</addProtoSources>
	                                <includeMavenTypes>direct</includeMavenTypes>
	                                <outputDirectory>protos</outputDirectory>
	                                <inputDirectories>
	                                        <include>src</include>
	                                </inputDirectories>
	                        </configuration>
	                    </execution>
	                </executions>
	            </plugin>
		</plugins>
	</build>
</project>